@@ -1,9 +1,8 @@
 /* config.h.  Generated by configure.  */
 /* config.h.in.  Generated from configure.ac by autoheader.  */
-/* $Id: config.h,v 1.13 2004/12/08 22:48:52 manu Exp $ */
 
 /* Build environnement */
-#define BUILD_ENV "manu@plan:/usr/home/manu/milter-greylist Wed Dec  8 23:48:32 CET 2004"
+#define BUILD_ENV "manu@plan:/usr/home/manu/milter-greylist Fri Dec 17 00:03:43 CET 2004"
 
 /* Define to 1 if you have the <arpa/inet.h> header file. */
 #define HAVE_ARPA_INET_H 1
@@ -12,7 +11,7 @@
 /* #undef HAVE_BROKEN_RCSID */
 
 /* broken rwlock in libpthread */
-#define HAVE_BROKEN_RWLOCK 
+/* #undef HAVE_BROKEN_RWLOCK */
 
 /* Define to 1 if you have the `bzero' function. */
 #define HAVE_BZERO 1
@@ -155,13 +154,13 @@
 #define PACKAGE_NAME "milter-greylist"
 
 /* Define to the full name and version of this package. */
-#define PACKAGE_STRING "milter-greylist 1.7.2"
+#define PACKAGE_STRING "milter-greylist 1.7.3"
 
 /* Define to the one symbol short name of this package. */
 #define PACKAGE_TARNAME "milter-greylist"
 
 /* Define to the version of this package. */
-#define PACKAGE_VERSION "1.7.2"
+#define PACKAGE_VERSION "1.7.3"
 
 /* Define to 1 if the C compiler supports function prototypes. */
 #define PROTOTYPES 1
