@@ -1,9 +1,9 @@
-# $Id: configure.ac,v 1.131 2004/12/08 22:48:53 manu Exp $
+# $Id: configure.ac,v 1.132 2004/12/16 23:08:13 manu Exp $
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.57)
-AC_INIT(milter-greylist, 1.7.2, manu@netbsd.org)
+AC_INIT(milter-greylist, 1.7.3, manu@netbsd.org)
 AC_CONFIG_SRCDIR([milter-greylist.c])
 AC_CONFIG_HEADER([config.h])
 
